# coralswap-core

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Makefile  SECURITY.md  UPGRADE.md  deny.toml  deployments.json  fix_and_test.ps1
.github/workflows/: audit.yml  benchmark.yml  ci.yml  deny.yml  matrix.yml
contracts/factory/: Cargo.toml
contracts/factory/src/: errors.rs  governance.rs  lib.rs  storage.rs
contracts/factory/src/test/: mod.rs
contracts/lp_token/src/: errors.rs  lib.rs  storage.rs
contracts/lp_token/src/test/: mod.rs
contracts/mock_flash_receiver/src/: lib.rs
contracts/pair/src/: errors.rs  events.rs  flash_loan.rs  lib.rs  reentrancy.rs  storage.rs
contracts/pair/src/math/: mod.rs
contracts/pair/src/oracle/: mod.rs
contracts/pair/src/test/: dynamic_fee.rs  flash_loan.rs  initialize.rs  mint.rs  mint_single_side.rs  mod.rs  oracle.rs  reentrancy.rs  swap_math.rs  sync.rs  views.rs
contracts/router/src/: errors.rs  helpers.rs  lib.rs  price_guard.rs  storage.rs
contracts/router/src/test/: mod.rs  price_guard.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs  oracle.rs
scripts/: README.md
tests/: Cargo.toml  integration.rs  router_properties.rs
tests/fuzz/: Cargo.toml
tests/fuzz/src/: lib.rs
tests/integration/: lifecycle.rs
tests/test_snapshots/: test_create_pair_identical_tokens_fails.1.json  test_create_pair_when_paused_fails.1.json  test_factory_full_pool_lifecycle.1.json  test_lp_supply_matches_expected_value_throughout.1.json
(+24 files in other folders)
